--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -2,7 +2,7 @@ name: Build and push a Docker image
 
 on:
   push:
-    tags: [ 'v*.*.*' ]
+    tags: [ '*' ]
   pull_request:
     branches: [ main ]
 
