--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -49,6 +49,8 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./${{ matrix.target }}
+          build-args: |
+            VERSION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}-${{ matrix.target }}
           labels: ${{ steps.meta.outputs.labels }}
