--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -55,8 +55,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./${{ matrix.target }}
-          build-args: |
-            VERSION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
+          build-args: VERSION=${{ github.ref_name }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
