Fix latest version tags

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -44,9 +44,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          flavor: |
-            latest=false
-            suffix=-${{ matrix.target }}
+          flavor: suffix=-${{ matrix.target }},onlatest=true
           tags: |
             type=raw,value=latest,enable={{is_default_branch}}
             type=ref,event=tag
