--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -44,8 +44,12 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          flavor: suffix=-${{ matrix.target }},onlatest=true
-          tags: type=ref,event=tag
+          flavor: |
+            latest=${{ github.ref == format('refs/heads/{0}', 'main') }}
+            suffix=-${{ matrix.target }},onlatest=true
+          tags: |
+            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
+            type=ref,event=tag
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
