--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -45,10 +45,10 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           flavor: |
-            latest=${{ github.ref == format('refs/heads/{0}', 'main') }}
+            latest=${{ github.ref == format('refs/heads/{0}', 'fix-latest') }}
             suffix=-${{ matrix.target }},onlatest=true
           tags: |
-            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
+            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'fix-latest') }}
             type=ref,event=tag
 
       - name: Build and push Docker image
