--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -44,10 +44,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          flavor: |
-            latest=${{ github.ref == format('refs/heads/{0}', 'main') }}
-            suffix=-${{ matrix.target }},onlatest=true
-          tags: type=ref,event=tag
+          tags: type=semver,pattern={{version}},suffix=-${{ matrix.target }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
