Add suffix to the latest tag

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -44,7 +44,8 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: type=semver,pattern={{version}},suffix=-${{ matrix.target }}
+          flavor: suffix=-${{ matrix.target }},onlatest=true
+          tags: type=semver,pattern={{version}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
